// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<td
  className="source-meta source-line-scm"
  data-line-number={3}
>
  <Dropdown
    overlay={
      <Memo(SCMPopup)
        line={
          Object {
            "line": 3,
            "scmAuthor": "foo",
            "scmDate": "2017-01-01",
          }
        }
      />
    }
    overlayPlacement="right-top"
  >
    <div
      aria-label="source_viewer.author_X.foo, source_viewer.click_for_scm_info"
      role="button"
    >
      <div
        className="source-line-scm-inner"
      >
        foo
      </div>
    </div>
  </Dropdown>
</td>
`;

exports[`should render correctly: no author 1`] = `
<td
  className="source-meta source-line-scm"
  data-line-number={3}
>
  <Dropdown
    overlay={
      <Memo(SCMPopup)
        line={
          Object {
            "line": 3,
            "scmDate": "2017-01-01",
          }
        }
      />
    }
    overlayPlacement="right-top"
  >
    <div
      aria-label="source_viewer.click_for_scm_info"
      role="button"
    >
      <div
        className="source-line-scm-inner"
      >
        …
      </div>
    </div>
  </Dropdown>
</td>
`;

exports[`should render correctly: same commit 1`] = `
<td
  className="source-meta source-line-scm"
  data-line-number={3}
>
  <Dropdown
    overlay={
      <Memo(SCMPopup)
        line={
          Object {
            "line": 3,
            "scmAuthor": "foo",
            "scmDate": "2017-01-01",
            "scmRevision": "foo",
          }
        }
      />
    }
    overlayPlacement="right-top"
  >
    <div
      aria-label="source_viewer.author_X.foo, source_viewer.click_for_scm_info"
      role="button"
    >
      <div
        className="source-line-scm-inner"
      >
         
      </div>
    </div>
  </Dropdown>
</td>
`;
